--- a/Comfizen/MainWindow.xaml
+++ b/Comfizen/MainWindow.xaml
@@ -1,5 +1,4 @@
-﻿<!-- START OF FILE MainWindow.xaml -->
-<Window x:Class="Comfizen.MainWindow"
+﻿<Window x:Class="Comfizen.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -253,6 +252,11 @@
                                                             <ControlTemplate x:Key="InpaintLayoutTemplate" TargetType="ContentControl">
                                                                 <ContentPresenter Content="{Binding}" ContentTemplateSelector="{StaticResource FieldTemplateSelector}" />
                                                             </ControlTemplate>
+                                                            <!-- START OF CHANGES: Add new template for Markdown -->
+                                                            <ControlTemplate x:Key="FullWidthLayoutTemplate" TargetType="ContentControl">
+                                                                 <ContentPresenter Content="{Binding}" ContentTemplateSelector="{StaticResource FieldTemplateSelector}" Margin="0,4" />
+                                                            </ControlTemplate>
+                                                            <!-- END OF CHANGES -->
                                                         </DataTemplate.Resources>
                                                         <ContentControl Content="{Binding}">
                                                             <ContentControl.Style>
@@ -262,6 +266,11 @@
                                                                         <DataTrigger Binding="{Binding Converter={StaticResource IsInpaintViewModelConverter}}" Value="True">
                                                                             <Setter Property="Template" Value="{StaticResource InpaintLayoutTemplate}"/>
                                                                         </DataTrigger>
+                                                                        <!-- START OF CHANGES: Add trigger for Markdown -->
+                                                                        <DataTrigger Binding="{Binding Converter={StaticResource IsMarkdownViewModelConverter}}" Value="True">
+                                                                            <Setter Property="Template" Value="{StaticResource FullWidthLayoutTemplate}"/>
+                                                                        </DataTrigger>
+                                                                        <!-- END OF CHANGES -->
                                                                     </Style.Triggers>
                                                                 </Style>
                                                             </ContentControl.Style>
@@ -741,4 +750,3 @@
         </Grid>
     </Grid>
 </Window>
-<!-- END OF FILE MainWindow.xaml -->
